kubernetes-manifest/nodeapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapi
  namespace: emart
  labels:
    app:  nodeapi
spec:
  selector:
    matchLabels:
      app: nodeapi
  replicas: 1
  template:
    metadata:
      labels:
        app:  nodeapi
    spec:
      containers:
      - name:  nodeapi
        image:  aravindepic/nodeapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: nodeapi
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
