kubernetes-manifest/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emongo
  namespace: emart
spec:
  selector:
    app: mongodb
  ports:
  - name: emongo
    protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
