kubernetes-manifest/nodeapsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapi
  namespace: emart
spec:
  selector:
    app: nodeapi
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
