kubernetes-manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emart-ingress
  namespace: emart
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb
  rules:
  - host: emart.qmvpro.shop
    http:
     paths:
      - path: /api/shop
        pathType: Prefix
        backend:
          service:
            name: javaapi-svc
            port:
              number: 9000
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: nodeapi
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nodeapi
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clientsvc
            port:
              number: 4200
